--- a/style.css
+++ b/style.css
@@ -41,19 +41,19 @@ body {
 }
 
 #servicos .page{
-    height:1000px;
+    height:1050px;
     background-color: #EDEDED;
 }
 #portfolio .page{
-    height:1500px;
+    height:1650px;
     background-color: #EDEDED;
 }
 #quem-somos .page{
-    height:1600px;
+    height:1650px;
     background-color: #EDEDED;
 }
 #contato .page{
-    height:600px;
+    height:750px;
     background-color: #EDEDED;
 }
 
@@ -62,6 +62,11 @@ body {
     font-size:12px;
     height:100px;
     text-align:center;
+}
+
+#menu_header{
+    width: 950px;
+    height: 40px;
 }
 
 #menu {
@@ -76,8 +81,7 @@ body {
     width:1px;
     z-index:9999;*/
     position:fixed;
-    margin: 20px 0 0 700px;
-    float: right;
+/*    margin: 15px 0 0 710px;*/
 }
 
 #menu ul {
@@ -188,3 +192,16 @@ body {
 #menu ul li.header {
     display:none;
 }*/
+
+section .page > h2 {
+  color:#222222;
+  display:block;
+  font-family:'Varela Round', 'Helvetica Neue', helvetica, arial, sans-serif;
+  font-size:100px;
+  font-style:normal;
+  font-variant:normal;
+  font-weight:400;
+  line-height:normal;
+  margin-bottom:20px;
+  text-transform:uppercase;
+}
